# AI-Smart-Grocery-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: alembic.ini  pyproject.toml  requirements-ml.txt  requirements-vision.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  deps.py  main.py
backend/app/config/: providers.py  settings.py
backend/app/db/: database.py  models.py
backend/app/providers/: base.py
backend/app/providers/barcode/: engines.py
backend/app/providers/detector/: yolo.py
backend/app/providers/embeddings/: embedders.py
backend/app/providers/llm/: echo.py  gemini.py
backend/app/providers/ocr/: engines.py
backend/app/providers/stt/: engines.py
backend/app/providers/tts/: engines.py
backend/app/rag/: index.py  store.py
backend/app/routers/: analyze.py  auth.py  barcode.py  cart.py  chat.py  dashboard.py  diet.py  history.py  pantry.py  products.py  recipe.py  recommend.py  value.py  vision.py  voice.py
backend/app/schemas/: models.py
backend/app/services/: analytics.py  billing.py  cart.py  catalog.py  diet.py  health_scoring.py  invoice.py  merge.py  nutrition.py  openfoodfacts.py  pantry.py  recipe.py  recommend.py  security.py  value.py
backend/tests/: test_analytics.py  test_api.py  test_auth.py  test_billing.py  test_catalog.py  test_diet.py  test_health_scoring.py  test_merge.py  test_nutrition.py  test_openfoodfacts.py  test_pantry.py  test_phase2_api.py  test_rag.py  test_recipe.py  test_recommend.py  test_value.py
docker/: Dockerfile.backend  nginx.conf  (+1 more)
(+36 files in other folders)
